0031580: Visualization, TKOpenGl - cubemap initialization error on OpenGL ES 2.0

OpenGl_Texture::InitCubeMap() now avoids using sized internal format in case of GLES2.
OpenGl_Sampler::applySamplerParams() now checks OpenGL version before setting GL_TEXTURE_WRAP_R.